--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 
 .nav-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
     height: 100%;
