--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body
 
 header {
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -26,13 +29,9 @@ header {
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-}
 
 .nav-container {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -42,32 +41,34 @@ body {
 
 .nav-container .logo {
     display: flex;
-    margin-left: 10%;
+    margin-left: 3%;
+    /* border: 2px solid red; */
     cursor: pointer;
 }
 
-header .nav-container .logo img {
-    width: 75px;
-}
+
 
 header .search {
     display: flex;
+    width: 50%;
     align-items: center;
     margin-left: 12px;
     height: 100%;
+    /* border: 2px solid red; */
     
 }
 
 header .search .search-container {
-    width: 650px;
+    width: 72%;
     height: 40px;
+    /* border: 2px solid red; */
     background-color: white;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 23%);
     display: flex;
 }
 
 header .search .search-container input {
-    width: calc(100% - 30px);
+    width: 100%;
     padding: 16px;
     outline: none;
     border: none;
@@ -76,7 +77,7 @@ header .search .search-container input {
 }
 
 header .search .search-container button {
-    width: 43px;
+    width: 42px;
     height: 100%;
     padding: 0 8px;
     display: flex;
@@ -92,13 +93,13 @@ header .search .search-container button {
 .menu button {
     background-color: var(--primary-color); /* Replace with your primary color */
     color: white;
-    border: none; /* Remove button border if desired */
-    padding: 10px 20px; /* Adjust padding as needed */
+    border: none;
     cursor: pointer;
     align-items: center;
     display: flex;
-    margin: 15px;
-    font-size: 20px;
+    margin-left: 35px;
+    margin-right: 35px;
+    font-size: 18px;
 }
 
 
@@ -109,7 +110,9 @@ header .menu svg {
 }
 
 header .storeicon {
-    margin-left: 330px;
+    display: flex;
+    margin-left: 10%;
+    justify-content: center;
     
 }
 
@@ -117,16 +120,16 @@ header .storeicon button {
     background-color: var(--primary-color); /* Replace with your primary color */
     color: white;
     border: none; /* Remove button border if desired */
-    padding: 10px 20px; /* Adjust padding as needed */
+    padding: 10px 20px;
     cursor: pointer;
     align-items: center;
     display: flex;
-    margin: 15px;
     font-size: 20px;
 }
 
 header .Cart {
     display: flex;
+    margin-left: 25px;
     color: white;
     gap: 5px;
     font-size: 20px;
@@ -148,28 +151,62 @@ header .Cart a {
 }
 
 .bottom-nav {
-    padding-top: 78px;
+    padding-top: 75px;
     display: flex;
     background-color: var(--primary-color);
     justify-content: space-between;
 
 }
 
-.bottom-nav > :nth-child(1) {
-    display: flex;
-    cursor: pointer;
-    gap: 16px;
-    margin-left: 10%;
-    font-size: 13px;
-    color: white;
-    padding-top: 13px;
-    padding-bottom: 13px;
+.bottom-nav {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  overflow-x:auto;
+  white-space: nowrap;
 }
 
-.bottom-nav > :nth-child(2) {
+.bottom-nav > div {
+  display: flex;
+  gap: 2px; /* Adjust as needed */
+  align-items: center;
+}
+
+.bottom-nav p {
+  margin: 0;
+  padding: 5px; /* Adjust as needed */
+  font-size: 13px;
+  flex-grow: 1;
+  color: white;
+}
+
+@media screen and (max-width: 1200px) {
+  .bottom-nav > div {
+      gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .bottom-nav > div {
+      gap: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-nav > div {
+      gap: 5px;
+  }
+
+  .bottom-nav > div > p:last-child {
+      display: none;
+  }
+}
+
+.bottom-nav > :nth-child(3) {
     display: flex;
     gap: 16px;
-    margin-right: 10%;
+    margin-left: 10%;
     font-size: 13px;
     color: white;
     padding-top: 13px;
@@ -180,7 +217,7 @@ header .Cart a {
     border-bottom: .5px solid #fff; /* Add an underline on hover, adjust color as needed */
 }
 
-.second > button, .first > button {
+.second > button, .morebutton > button {
     display: flex;
     cursor: pointer;
     gap: 5px;
@@ -188,7 +225,14 @@ header .Cart a {
     background: var(--primary-color);
 }
 
-.account > svg, .more > svg {
+.morebutton {
+  display: flex;
+  padding-top: 3px;
+  padding-left: 10px;
+  align-items: center;
+}
+
+.account > svg, .morebutton > .more > svg {
     fill: white;
     stroke: white;
     stroke-width: 1;
@@ -196,7 +240,7 @@ header .Cart a {
     width: 15px;
   }
 
-  .account > a, .more > a, .recent > a, .order > a, .saved > a {
+  .account > a, .morebutton > .more > a, .recent > a, .order > a, .saved > a {
     color: white;
     font-size: 14px;
   }
