--- a/cart.css
+++ b/cart.css
@@ -16,6 +16,9 @@ body
 
 header {
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -26,9 +29,6 @@ header {
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-}
 
 .nav-container {
     display: flex;
@@ -41,33 +41,37 @@ body {
 
 .nav-container .logo {
     display: flex;
-    margin-left: 10%;
+    margin-left: 3%;
+    /* border: 2px solid red; */
     cursor: pointer;
 }
 
-header .nav-container .logo img {
-    width: 75px;
-}
+
 
 header .search {
     display: flex;
+    width: 50%;
     align-items: center;
     margin-left: 12px;
     height: 100%;
+    /* border: 2px solid red; */
     
 }
 
 header .search .search-container {
-    width: 650px;
+    width: 72%;
     height: 40px;
+    border-radius: 5px;
     background-color: white;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 23%);
     display: flex;
 }
 
 header .search .search-container input {
-    width: calc(100% - 30px);
+    width: 100%;
     padding: 16px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
     outline: none;
     border: none;
     font-family: inherit;
@@ -75,31 +79,31 @@ header .search .search-container input {
 }
 
 header .search .search-container button {
-    width: 43px;
+    width: 42px;
     height: 100%;
     padding: 0 8px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: none;
     background-color: white;
-    border-radius: 0 2px 2px 0;
     cursor: pointer;
 }
 
-/* Apply a white background and white text color to the menu button */
+
 .menu button {
-    background-color: var(--primary-color); /* Replace with your primary color */
+    background-color: var(--primary-color);
     color: white;
-    border: none; /* Remove button border if desired */
-    padding: 10px 20px; /* Adjust padding as needed */
+    border: none;
     cursor: pointer;
     align-items: center;
     display: flex;
-    margin: 15px;
-    font-size: 20px;
+    margin-left: 35px;
+    margin-right: 35px;
+    font-size: 18px;
 }
-
 
 
 header .menu svg {
@@ -108,24 +112,26 @@ header .menu svg {
 }
 
 header .storeicon {
-    margin-left: 330px;
+    display: flex;
+    margin-left: 10%;
+    justify-content: center;
     
 }
 
 header .storeicon button {
-    background-color: var(--primary-color); /* Replace with your primary color */
+    background-color: var(--primary-color);
     color: white;
-    border: none; /* Remove button border if desired */
-    padding: 10px 20px; /* Adjust padding as needed */
+    border: none;
+    padding: 10px 20px;
     cursor: pointer;
     align-items: center;
     display: flex;
-    margin: 15px;
     font-size: 20px;
 }
 
 header .Cart {
     display: flex;
+    margin-left: 25px;
     color: white;
     gap: 5px;
     font-size: 20px;
@@ -143,20 +149,64 @@ header .Cart a {
 }
 
 .Cart > a:hover {
-    border-bottom: 2px solid #fff; /* Add an underline on hover, adjust color as needed */
+    border-bottom: 2px solid #fff;
 }
 
 .bottom-nav {
-    padding-top: 78px;
+    padding-top: 75px;
     display: flex;
     background-color: var(--primary-color);
     justify-content: space-between;
 
 }
 
-.bottom-nav > :nth-child(1) {
+.bottom-nav {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  overflow-x:auto;
+  white-space: nowrap;
+}
+
+.bottom-nav > div {
+  display: flex;
+  gap: 2px;
+  align-items: center;
+}
+
+.bottom-nav p {
+  margin: 0;
+  padding: 5px;
+  font-size: 13px;
+  flex-grow: 1;
+  color: white;
+}
+
+@media screen and (max-width: 1200px) {
+  .bottom-nav > div {
+      gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .bottom-nav > div {
+      gap: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-nav > div {
+      gap: 5px;
+  }
+
+  .bottom-nav > div > p:last-child {
+      display: none;
+  }
+}
+
+.bottom-nav > :nth-child(3) {
     display: flex;
-    cursor: pointer;
     gap: 16px;
     margin-left: 10%;
     font-size: 13px;
@@ -165,21 +215,11 @@ header .Cart a {
     padding-bottom: 13px;
 }
 
-.bottom-nav > :nth-child(2) {
-    display: flex;
-    gap: 16px;
-    margin-right: 10%;
-    font-size: 13px;
-    color: white;
-    padding-top: 13px;
-    padding-bottom: 13px;
-}
-
 .first > p:hover {
-    border-bottom: .5px solid #fff; /* Add an underline on hover, adjust color as needed */
+    border-bottom: .5px solid #fff;
 }
 
-.second > button, .first > button {
+.second > button, .morebutton > button {
     display: flex;
     cursor: pointer;
     gap: 5px;
@@ -187,7 +227,14 @@ header .Cart a {
     background: var(--primary-color);
 }
 
-.account > svg, .more > svg {
+.morebutton {
+  display: flex;
+  padding-top: 3px;
+  padding-left: 10px;
+  align-items: center;
+}
+
+.account > svg, .morebutton > .more > svg {
     fill: white;
     stroke: white;
     stroke-width: 1;
@@ -195,20 +242,94 @@ header .Cart a {
     width: 15px;
   }
 
-  .account > a, .more > a, .recent > a, .order > a, .saved > a {
+  .account > a, .morebutton > .more > a, .recent > a, .order > a, .saved > a {
     color: white;
     font-size: 14px;
   }
 
-  section {
-    height: 800px;
-    margin-top: 1000px;
-  }
+
 
   .cont {
     background-color: var(--primary-color) ;
   }
 
-  section {
-    height: 800px;
+  middle-section > .middle {
+    background-color: white;
+    background: url(https://pisces.bbystatic.com/image2/BestBuy_US/dam/GL-85825-GHP_LV-3day-c2f9c02f-4aa0-4bd2-8bc0-b8ff5a313d67.jpg);
+    height: 300px;
+    position: relative;
+  }
+
+  footer > bottom {
+    background-color: #90959e;
+    height: 200px;
+  }
+
+  .offer {
+    display: flex;
+    border: 2px solid brown;
+    justify-content: center;
+
+  }
+
+  .offer > :nth-child(1){
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: left;
+  }
+
+  .offer > :nth-child(2) {
+    display: flex;
+    margin-left: 60px;
+    gap: 10px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: left;
+    width:290px;
+  }
+
+  .end {
+    background-color: red;
+    width: 90px;
+    color: white;
+    padding: 3px;
+    font-size: 13px;
+  }
+
+  .sale {
+    color: #001e73;
+    font-size: 90px;
+    font-weight: bolder;
+  }
+
+  .friday {
+    color: #001e73;
+    font-size: 22px;
+  }
+
+  .sunday {
+    margin-top: 30px;
+    margin-right: 60px;
+  }
+
+  .plus {
+    margin-top: 30px;
+    font-size: 15px;
+    color: rgb(43, 40, 40);
+  }
+
+  .limit {
+    font-size: 11px;
+    width: 180px;
+    color: #55555a;
+  }
+
+  .now {
+    color: white;
+    background-color: var(--primary-color);
+    width: 75px;
+    padding: 4px;
+    border: none;
+    border-radius: 3px;
   }
