--- a/style.css
+++ b/style.css
@@ -252,12 +252,19 @@ header .Cart a {
   .cont {
     background-color: var(--primary-color) ;
   }
+  
+  
 
-  middle-section > .middle {
-    background-color: white;
+  .section{ 
+    display: flex;
+    background-color: yellow;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+  }
+  
+  #middle {
     background: url(https://pisces.bbystatic.com/image2/BestBuy_US/dam/GL-85825-GHP_LV-3day-c2f9c02f-4aa0-4bd2-8bc0-b8ff5a313d67.jpg);
-    height: 300px;
-    position: relative;
   }
 
   footer > bottom {
@@ -267,78 +274,144 @@ header .Cart a {
 
   .offer {
     display: flex;
-    border: 2px solid brown;
     justify-content: center;
+    /* border: 2px solid red; */
+    padding: 0;
 
   }
 
-  .offer > :nth-child(1){
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: left;
-  }
+  
+.offer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin-top: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 30px;
+  /* border: 2px solid brown; */
+}
 
-  .offer > :nth-child(2) {
-    display: flex;
-    margin-left: 60px;
-    gap: 10px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: left;
-    width:290px;
-  }
+.sunday
+{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 20px;
+  /* border: 2px solid red; */
+  width: 50%;
 
-  .end {
-    background-color: red;
-    width: 90px;
-    color: white;
-    padding: 3px;
-    font-size: 13px;
-  }
+}
 
-  .sale {
-    color: #001e73;
-    font-size: 90px;
-    font-weight: bolder;
-  }
+.shop
+{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 20px;
+  /* border: 2px solid; */
+  width: 40%;
+}
 
-  .friday {
-    color: #001e73;
-    font-size: 22px;
-  }
+.end {
+  background-color: red;
+  padding: 7px;
+  width: 20%;
 
-  .sunday {
-    margin-top: 30px;
-    margin-right: 60px;
-  }
+}
 
-  .plus {
-    margin-top: 30px;
-    font-size: 15px;
-    color: rgb(43, 40, 40);
-  }
+.faq {
+  width: 300px;
+  padding-top: 30px;
+}
 
-  .limit {
-    font-size: 11px;
-    width: 180px;
-    color: #55555a;
-  }
+.faq > :nth-child(1) {
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
 
-  .now {
-    color: white;
-    background-color: var(--primary-color);
-    width: 75px;
-    padding: 4px;
-    border: none;
-    border-radius: 3px;
-  }
+.faq > :nth-child(2) {
+  font-size: 13px;
+  line-height: 20px;
+}
 
-  .dropdown-menu > ul{
-    /* display: flex; */
-    background-color: white;
-    width: 80px;
-    border: 2px solid grey;
-    margin-top: 20px;
+.shopnow-btn {
+  background-color: var(--primary-color);
+  border: none;
+  padding: 7px;
+  border-radius: 2px;
+}
 
-  }
+.sale > h1 {
+  font-size: 70px;
+}
+
+.products {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-right: 10%;
+  /* border: 2px solid red; */
+}
+
+.deals {
+  margin-left: 50px;
+  font-size: 16px;
+}
+
+.sub {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  padding-top: 20px;
+  /* border: 2px solid red; */
+  justify-content: space-evenly;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: transparent;
+
+}
+
+.level1 {
+  text-align: center;
+}
+
+.circle-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 10px; /* Adjust as needed */
+}
+
+.circle {
+  width: 120px;
+  height: 120px;
+  background-color: white; /* Set to transparent */
+  border: 3px solid #3498db; /* or any color you prefer */
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto; /* Center the circle */
+  overflow: hidden; /* Ensure the image is within the circle */
+}
+
+.circle img {
+  width: 80%; /* Adjust the size of the image within the circle */
+  height: 80%;
+  /* border-radius: 50%; */
+  display: block; /* Remove any potential extra space */
+}
+
+.text-outside {
+  margin-top: 10px; /* Adjust as needed */
+  font-family: sans-serif;
+  font-size: 13px;
+  /* text-decoration: none; */
+}
+
+.text-outside > a {
+  text-decoration: none;
+  color: black;
+}
