--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ header .Cart a {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   background-color: rgb(240,242,244);
   padding-top: 30px;
   padding-bottom: 30px;
@@ -471,6 +471,8 @@ header .Cart a {
   flex-direction: column;
   width: 30%;
   /* border: 2px solid black; */
+  background-color: white;
+  margin: 2%;
 }
 
 .sub-links {
@@ -575,4 +577,138 @@ header .Cart a {
 
 footer {
   background-color: rgb(240,242,244);
+}
+
+.accoun-enquery {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  margin: 5%;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(197,203,213);
+
+}
+
+.accoun-enquery > a {
+  text-decoration: none;
+  font-size: 12px;
+  color: var(--primary-color);
+}
+
+.latest-deals {
+  display: flex;
+  padding-left: 5%;
+}
+
+.signup-enquery {
+  display: flex;
+  /* padding-left: 5%; */
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #90959e;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+#signup-enquery {
+  width: 180px;
+  height: 30px;
+  font-size: 15px;
+  border: 1px solid;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  padding-left: 5px;
+  border-radius: 5px;
+}
+
+.signup-btn-enquery {
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  width: 100px;
+  color: white;
+  font-weight: bold;
+}
+
+.best-buy {
+  display: flex;
+  /* border: 2px solid; */
+  flex-direction: row;
+  margin: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #90959e;
+}
+
+.best-buy-svg {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  fill: var(--primary-color);
+  width: 15%;
+  /* border: 2px solid; */
+}
+
+.learn {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+}
+
+.learn > a {
+  text-decoration: none;
+  font-size: 14px;
+  color: var(--primary-color);
+}
+
+.social-enquery {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 5px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  padding-bottom: 15px;
+  gap: 40px;
+  border-bottom: 1px solid #90959e;
+}
+
+.social-enquery > .youtube,.facebook,.twitter,.pintrest,.insta > svg {
+  fill: var(--primary-color);
+}
+
+.youtube {
+  width: 20%;
+}
+
+.insta {
+  width: 20%;
+}
+
+.facebook {
+  width: 20%;
+}
+
+.pintrest {
+  width: 20%;
+}
+
+.twitter {
+  width: 20%;
+}
+
+.blogger-enquery {
+  display: flex;
+  margin-left: 5%;
+  padding-top: 20px;
+}
+
+.blogger-enquery > a {
+  text-decoration: none;
+  font-size: 12px;
+  color: var(--primary-color);
 }
